scripts/e2e/cmd/runner/testdata/networking-v1/one-namespace-many-ingresses/hostname-with-wildcard-priority/app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/hostname-extension: "contoso.extended.com"
    appgw.ingress.kubernetes.io/rule-priority: "100"
  name: ing-priority
spec:
  tls:
  - secretName: testsecret-tls
  rules:
  - host: contoso.extended.com
    http:
      paths:
      - backend:
          service:
            name: svc
            port:
              name: pp
        path: /status*
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/hostname-extension: "*.extended.com"
    appgw.ingress.kubernetes.io/rule-priority: "200"
  name: ing-wildcard
spec:
  tls:
  - secretName: testsecret-tls
  rules:
  - host: www.extended.com
    http:
      paths:
      - backend:
          service:
            name: svc
            port:
              name: pp
        path: /status*
        pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl
spec:
  selector:
    matchLabels:
      app: app
  replicas: 1
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: ctr
          imagePullPolicy: Always
          image: docker.io/kennethreitz/httpbin
          ports:
            - name: port
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /status/200
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
      imagePullSecrets:
        - name: acr-creds
---
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    app: app
  ports:
  - name: pp
    protocol: TCP
    port: 80
    targetPort: port
---
apiVersion: v1
data:
  tls.crt: QmFnIEF0dHJpYnV0ZXMKICAgIGxvY2FsS2V5SUQ6IDAxIDAwIDAwIDAwIAogICAgMS4zLjYuMS40LjEuMzExLjE3LjMuNzE6IDREIDAwIDQ5IDAwIDRFIDAwIDQ5IDAwIDRFIDAwIDU0IDAwIDJEIDAwIDQ4IDAwIDU0IDAwIDUyIDAwIDM2IDAwIDU2IDAwIDU0IDAwIDM2IDAwIDJFIDAwIDZFIDAwIDZGIDAwIDcyIDAwIDc0IDAwIDY4IDAwIDYxIDAwIDZEIDAwIDY1IDAwIDcyIDAwIDY5IDAwIDYzIDAwIDYxIDAwIDJFIDAwIDYzIDAwIDZGIDAwIDcyIDAwIDcwIDAwIDJFIDAwIDZEIDAwIDY5IDAwIDYzIDAwIDcyIDAwIDZGIDAwIDczIDAwIDZGIDAwIDY2IDAwIDc0IDAwIDJFIDAwIDYzIDAwIDZGIDAwIDZEIDAwIDAwIDAwIApzdWJqZWN0PS9DT [...]
  tls.key: QmFnIEF0dHJpYnV0ZXMKICAgIE1pY3Jvc29mdCBMb2NhbCBLZXkgc2V0OiA8Tm8gVmFsdWVzPgogICAgbG9jYWxLZXlJRDogMDEgMDAgMDAgMDAgCiAgICBmcmllbmRseU5hbWU6IHRlLTgzMDkwZjk3LWIzOWItNDFmMC05YmYyLTkzNTM0MjhlODdlYQogICAgTWljcm9zb2Z0IENTUCBOYW1lOiBNaWNyb3NvZnQgU29mdHdhcmUgS2V5IFN0b3JhZ2UgUHJvdmlkZXIKS2V5IEF0dHJpYnV0ZXMKICAgIFg1MDl2MyBLZXkgVXNhZ2U6IDkwIAotLS0tLUJFR0lOIFBSSVZBVEUgS0VZLS0tLS0KTUlJRXZRSUJBREFOQmdrcWhraUc5dzBCQVFFRkFBU0NCS2N3Z2dTakFnRUFBb0lCQVFDbFdUY0hTWDBaRDd4cApsdFpkNDh4QXJZQ1NkMUZiVjF4L3BNVHJMT [...]
kind: Secret
metadata:
  name: testsecret-tls
type: kubernetes.io/tls
